Fixed Candidate deadlock scenario with MessageHandlerThread