@@ -1,3 +1,3 @@
 #!/bin/bash
 
-clear && java -Xmx1024m -XX:MaxPermSize=256m -cp target/raftprotocol-1.0-SNAPSHOT.jar RaftNode
+clear && java -Xmx1024m -cp target/raftprotocol-1.0-SNAPSHOT.jar RaftNode
